# simple-orchestrator

./: .gitignore
igniter/: Cargo.toml
igniter/src/: config.rs  lib.rs  main.rs
igniter/src/api/: mod.rs
igniter/src/api/containers/: mod.rs
igniter/src/container/: inspect.rs  mod.rs  run.rs  stats.rs
igniter/src/ctr/: container_ctr.rs  mod.rs
orchestrator/: Cargo.toml
orchestrator/src/: lib.rs  main.rs  orchestrator_conf.rs  resource.rs  server_conf.rs
orchestrator/src/igniter_ctr/: container_ctr.rs  mod.rs  rest_ctr.rs
orchestrator/src/resource/: container_resource.rs  excutable_resource.rs  resource_conf.rs  resource_port.rs  resource_type.rs
