[package]
name = "igniter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.163", features=["derive"]}
serde_yaml = "0.9.21"
rocket = {version = "0.5.0",features = ["json"]}
lazy_static = "1.4.0"
bollard = "0.17.0"
rocket_okapi = {version = "0.8.0",features = ["swagger","rapidoc"]}